--- a/playbook.yml
+++ b/playbook.yml
@@ -11,11 +11,15 @@
     WP_MYSQL_DBNAME: db_wordpress
 
   tasks:
+  - name: install epel repo
+    yum: name=epel-release enablerepo=epel state=present
+    tags: pkgs_repo
+
   - name: upgrade all packages
     yum: name=* state=latest
     tags: pkgs_upgrade
   
-  - name: install 'Development tools' package group
+  - name: install 'Development Tools' package group
     yum: name="@Development tools" state=present
     tags: pkgs_tools
 
@@ -25,12 +29,24 @@
       - httpd
       - httpd-tools
       - mysql-server
+      - mysql-config
+      - mysql-common
+      - mysql-devel
+      - MySQL-python27
       - php
       - php-cli
       - php-devel
+      - php-mysqlnd
       - php-mbstring
       - php-pear
+      - python-pip
       - git
+
+  - name: enable httpd at boot time and start service
+    service: name=httpd state=started enabled=yes
+
+  - name: enable mysql at boot time and start service
+    service: name=mysqld state=started enabled=yes
 
   - name: create mysql database credentials
     mysql_user:
@@ -69,14 +85,14 @@
 #
 # To add Templates
 #
-#  - name: write the apache config file
+#  - name: write the httpd config file
 #    template:
 #      src: /templates/conf/httpd.j2
 #      dest: /etc/httpd.conf
 #    notify:
-#    - restart apache
+#    - restart httpd
 #  handlers:
-#    - name: restart apache
+#    - name: restart httpd
 #      service:
 #        name: httpd
 #        state: restarted
